--- a/www/mozex/Makefile.xpi
+++ b/www/mozex/Makefile.xpi
@@ -1,12 +1,12 @@
 # Date created:			  Sun Oct 26, 2003
 # Whom:				  Thierry Thomas (<thierry@pompo.net>)
 #
-# $FreeBSD: ports/www/mozex/Makefile.xpi,v 1.2 2004/11/10 20:04:44 marcus Exp $
+# $FreeBSD: ports/www/mozex/Makefile.xpi,v 1.3 2004/11/13 08:23:14 ahze Exp $
 #
 
 EXTRACT_SUFX=   .xpi
 
-BUILD_DEPENDS+=	${MOZDIR}/regchrome:${PORTSDIR}/www/${MOZPORT}
+BUILD_DEPENDS+=	${MOZDIR}/regxpcom:${PORTSDIR}/www/${MOZPORT}
 RUN_DEPENDS+=	${MOZDIR}:${PORTSDIR}/www/${MOZPORT}
 
 NO_BUILD=	yes
