--- a/mail/mailgraph/files/mailgraph.sh.in
+++ b/mail/mailgraph/files/mailgraph.sh.in
@@ -1,6 +1,6 @@
 #!/bin/sh
 #
-# $FreeBSD: ports/mail/mailgraph/files/mailgraph.sh.tmpl,v 1.2 2004/05/13 07:04:53 kuriyama Exp $
+# $FreeBSD: ports/mail/mailgraph/files/mailgraph.sh.tmpl,v 1.3 2004/06/09 10:38:25 vs Exp $
 #
 # PROVIDE: mailgraph
 # REQUIRE: DAEMON
