--- a/editors/openoffice.org-2.0/files/Makefile.knobs
+++ b/editors/openoffice.org-2.0/files/Makefile.knobs
@@ -1,6 +1,6 @@
 # Makefile for knobs
 # Whom:         Maho Nakata <maho@FreeBSD.org>
-# $FreeBSD: ports/editors/openoffice.org-2.0/files/Makefile.knobs,v 1.21 2005/10/04 03:59:42 maho Exp $
+# $FreeBSD: ports/editors/openoffice.org-2.0/files/Makefile.knobs,v 1.22 2005/10/31 07:38:42 maho Exp $
 
 .if !defined(WITHOUT_JAVA) && !defined(WITH_GNUGCJ)
 CONFIGURE_ARGS+=	--with-jdk-home="${JAVA_HOME}" --with-ant-home=${LOCALBASE}/ant
@@ -89,11 +89,11 @@ pre-fetch:
 	@${ECHO} "You can select the language for OOo by making it with:"
 	@${ECHO} "make LOCALIZED_LANG=xx" 
 	@${ECHO} "while xx can be one of the following"
-	@${ECHO} "af ar bn be-BY bg ca cs cy da de el en-GB en-US eo es"
-	@${ECHO} "et eu fi fr ga gl gu-IN he hi-IN hr hu it ja km kn-IN"
-	@${ECHO} "ko lo lt ms ne nb nl nn nr ns pa-IN pl pt pt-BR ru rw"
-	@${ECHO} "sk sl sh-YU sr-CS ss st sv sw-TZ ta-IN th tn tr ts ve"
-	@${ECHO} "vi xh zh-CN zh-TW zu"
+	@${ECHO} "af ar be-BY bg br bn bn-BD bn-IN bs ca cs cy da de el"
+	@${ECHO} "en-GB en-US en-ZA eo es et eu fi fr ga gl gu-IN he hi-IN"
+	@${ECHO} "hr hu it ja km kn-IN ko lo lt lv mk ms ne nb nl nn nr"
+	@${ECHO} "ns pa-IN pl pt pt-BR ru rw sk sl sh-YU sr-CS ss st sv"
+	@${ECHO} "sw sw-TZ sx ta-IN th tn tr ts ve vi xh zh-CN zh-TW zu"
 	@${ECHO} "Default: en-US"
 #XXX currently broken
 #.if !defined(WITHOUT_JAVA)
