--- a/ftp/Makefile
+++ b/ftp/Makefile
@@ -72,6 +72,7 @@
     SUBDIR += pear-Net_FTP
     SUBDIR += pfptx
     SUBDIR += pftpd
+    SUBDIR += pftpx
     SUBDIR += php4-curl
     SUBDIR += php4-ftp
     SUBDIR += php5-curl
