--- a/net/linphone-base/Makefile.common
+++ b/net/linphone-base/Makefile.common
@@ -1,9 +1,9 @@
 #
-# $FreeBSD: ports/net/linphone-base/Makefile.common,v 1.3 2005/04/04 21:42:06 pav Exp $
+# $FreeBSD: ports/net/linphone-base/Makefile.common,v 1.4 2005/09/04 00:06:17 sem Exp $
 #
 
 LINPHONE_PORTNAME=	linphone
-LINPHONE_PORTVERSION=	1.1.0
+LINPHONE_PORTVERSION=	1.2.0
 LINPHONE_PORTREVISION=	0
 LINPHONE_PORTEPOCH=	1
 LINPHONE_MASTER_SITES=	http://simon.morlat.free.fr/download/stable/source/
