--- a/multimedia/projectx/files/project-x.sh.in
+++ b/multimedia/projectx/files/project-x.sh.in
@@ -1,12 +1,15 @@
 #!/bin/sh
 #
-# $FreeBSD$
+# $FreeBSD: ports/multimedia/projectx/files/project-x.sh.in,v 1.1 2005/04/21 12:08:11 hq Exp $
 
 case "$#" in
 0)
 	mkdir -p "${HOME}/.projectx"
 	cd "${HOME}/.projectx"
-	ln -sf %%PREFIX%%/share/projectx/htmls .
+	ln -sf %%DATADIR%%/*.txt %%DATADIR%%/htmls .
+	if ! grep '^# ProjectX 0.90.2.00' X.ini >/dev/null; then
+		rm -f X.ini
+	fi
 	;;
 esac
 
