--- a/print/psutils-a4/Makefile
+++ b/print/psutils-a4/Makefile
@@ -2,10 +2,12 @@
 # Date created:         21 September 1994
 # Whom:                 jmz & David O'Brien (obrien@cs.ucdavis.edu)
 #
-# $FreeBSD: ports/print/psutils-a4/Makefile,v 1.2 1999/08/31 01:45:17 peter Exp $
+# $FreeBSD$
 #
 
 PAPERSIZE=	a4
 MASTERDIR=	${.CURDIR}/../psutils-letter
+
+CONFLICTS=	psutils-letter-*
 
 .include "${MASTERDIR}/Makefile"
