--- a/x11/gdm/files/gdm.sh.in
+++ b/x11/gdm/files/gdm.sh.in
@@ -1,9 +1,13 @@
 #!/bin/sh
-# $FreeBSD: ports/x11/gdm/files/gdm.sh.in,v 1.6 2005/11/25 18:34:34 marcus Exp $
+# $FreeBSD: ports/x11/gdm/files/gdm.sh.in,v 1.7 2005/12/05 21:57:48 marcus Exp $
 
 # PROVIDE: gdm
-# REQUIRE: DAEMON LOGIN cleanvar
-# KEYWORD: FreeBSD
+# REQUIRE: LOGIN cleanvar moused
+#
+# Add the following to /etc/rc.conf to start GDM at boot time:
+#
+# gdm_enable="YES"
+#
 
 gdm_enable=${gdm_enable-"NO"}
 
