--- a/misc/linux-opengroupware/files/zidestore.sh.sample
+++ b/misc/linux-opengroupware/files/zidestore.sh.sample
@@ -1,5 +1,5 @@
 #!/bin/sh
-# $FreeBSD$
+# $FreeBSD: ports/misc/linux-opengroupware/files/zidestore.sh.sample,v 1.1 2003/10/13 21:35:59 se Exp $
 #
 # Frank Reppin <frank.reppin@boerde.de>
 
@@ -25,7 +25,8 @@ start)
 
 	[ -x ${ZIDE_BIN} ] && {
 		su -l ${OGO_USER} -c \
-			"./WOApps/ZideStore.woa/ix86/linux-gnu/gnu-fd-nil/ZideStore >>${LOG} 2>&1 &"
+#the next line must be comment out and modified to reflect your configuration in order to start OpenGroupware
+#			"./WOApps/ZideStore.woa/ix86/linux-gnu/gnu-fd-nil/ZideStore -WOHttpAllowHost '(localhost, you.yourdomain.org)'>>${LOG} 2>&1 &"
 		echo 'ZideStore started.'
 		echo "**** RECEIVED 'start' from STARTSCRIPT at `date` ****" >>${LOG}
 	}
