--- a/net-im/sulci/files/sulci.sh.in
+++ b/net-im/sulci/files/sulci.sh.in
@@ -1,29 +1,33 @@
 #!/bin/sh
-# $FreeBSD: ports/net/sulci/files/sulci.sh.in,v 1.1 2005/07/13 22:54:35 pav Exp $
+# $FreeBSD: ports/net-im/sulci/files/sulci.sh.in,v 1.2 2005/10/21 23:34:09 mnag Exp $
 
 # PROVIDE: sulci
 # REQUIRE: DAEMON
-# BEFORE: LOGIN
-# KEYWORD: shutdown
 
 # Define these sulci_* variables in one of these files:
 #       /etc/rc.conf
 #       /etc/rc.conf.local
 #       /etc/rc.conf.d/sulci
 #
-# DO NOT CHANGE THESE DEFAULT VALUES HERE
+# sulci_enable : bool
+#   Enable ("YES") or disable ("NO", the default) this startup script.
 #
-sulci_enable=${sulci_enable-"NO"}
-sulci_precmd=":"
+# sulci_precmd : string
+#   Execute this command before the daemon startup, ":" by default.
+#
 
 . %%RC_SUBR%%
 
 name="sulci"
 rcvar=`set_rcvar`
+
 command="%%PREFIX%%/sbin/sulci"
 command_args="&"
 
-load_rc_config $name
+load_rc_config "${name}"
+
+: ${sulci_enable="NO"}
+: ${sulci_precmd=":"}
 
 start_precmd="${sulci_precmd}"
 
