Now that new style rc.d scripts are being run as part of the base rcorder, hard coded variable values in these scripts are overriding the values in /etc/rc.conf[.local] (due to the way that variables from the latter are read at boot time).
Therefore, change the boot scripts to set default values only
if the variable is unset in /etc/rc.conf[.local]. This will
allow the service to start at boot time if it's been enabled
as the user would expect.

This change will be a noop for users who have systems that
have not yet been upgraded to the new rc.d code in the base.

In many cases there are other variables in the scripts that
should get similar treatment, however I did not change
anything other than the _enable lines. I'll leave the rest
up to the maintainers to do as they see fit.

Bump PORTREVISION to make sure that users and packages
pick up this change.

--- a/net-mgmt/bsnmpd/files/bsnmpd.sh.in
+++ b/net-mgmt/bsnmpd/files/bsnmpd.sh.in
@@ -1,11 +1,11 @@
 #!/bin/sh
-# $FreeBSD$
+# $FreeBSD: ports/net-mgmt/bsnmpd/files/bsnmpd.sh.in,v 1.1 2005/09/27 17:32:27 mnag Exp $
 #
 # PROVIDE: bsnmpd
 # REQUIRE: NETWORKING syslogd
 # KEYWORD: nojail
 
-bsnmpd_enable="NO"
+bsnmpd_enable="${bsnmpd_enable-NO}"
 
 . %%RC_SUBR%%
 
