--- a/net/mDNSResponder/files/mdnsd.sh.in
+++ b/net/mDNSResponder/files/mdnsd.sh.in
@@ -1,11 +1,11 @@
 #!/bin/sh
-# $FreeBSD: ports/net/mDNSResponder/files/mdnsd.sh.in,v 1.2 2005/03/26 07:21:13 krion Exp $
+# $FreeBSD: ports/net/mDNSResponder/files/mdnsd.sh.in,v 1.3 2005/03/26 07:59:14 krion Exp $
 
 # PROVIDE: mdnsd
 # REQUIRE: DAEMON
 # KEYWORD: FreeBSD shutdown
 
-mdnsd_enable="NO"
+mdnsd_enable="${mdnsd_enable-NO}"
 
 . %%RC_SUBR%%
 
