--- a/net-im/ejabberd/files/ejabberd.sh.in
+++ b/net-im/ejabberd/files/ejabberd.sh.in
@@ -1,5 +1,5 @@
 #! /bin/sh
-# $FreeBSD$
+# $FreeBSD: ports/net-im/ejabberd/files/ejabberd.sh.in,v 1.1 2005/08/28 15:51:48 vsevolod Exp $
 
 # PROVIDE: ejabberd
 # REQUIRE: DAEMON
@@ -13,7 +13,7 @@
 #
 # DO NOT CHANGE THESE DEFAULT VALUES HERE
 #
-ejabberd_enable="NO"
+ejabberd_enable="${ejabberd_enable-NO}"
 
 . %%RC_SUBR%%
 
