--- a/sysutils/ganglia-monitor-core/files/ganglia.sh.in
+++ b/sysutils/ganglia-monitor-core/files/ganglia.sh.in
@@ -1,5 +1,5 @@
 #!/bin/sh
-# $FreeBSD: ports/sysutils/ganglia-monitor-core/files/ganglia.sh.in,v 1.1 2005/03/01 23:04:37 brooks Exp $
+# $FreeBSD: ports/sysutils/ganglia-monitor-core/files/ganglia.sh.in,v 1.2 2005/04/27 17:52:41 brooks Exp $
 
 # PROVIDE: ganglia
 # REQIORE: DAEMON
@@ -9,12 +9,12 @@
 # dependencies, but we can't do that at the moment and gmetad doesn't
 # work without a running gmond.
 
-gmond_enable="NO"
+gmond_enable="${gmond_enable-NO}"
 gmond_conf="%%PREFIX%%/etc/gmond.conf"
 
-gmetad_enable="NO"
+gmetad_enable="${gmetad_enable-NO}"
 gmetad_conf="%%PREFIX%%/etc/gmetad.conf"
-gmetasnap_enable="NO"
+gmetasnap_enable="${gmetasnap_enable-NO}"
 gmetasnap_rrddir="/var/db/ganglia/rrds"
 gmetasnap_snapdir="/var/db/ganglia/snaps"
 gmetasnap_snapname="snap"
