--- a/net/openslp/files/slpd.in
+++ b/net/openslp/files/slpd.in
@@ -1,10 +1,10 @@
 #!/bin/sh
 #
-# $FreeBSD: ports/net/openslp/files/slpd.sh.sample,v 1.3 2004/07/21 19:56:49 marcus Exp $
+# $FreeBSD: ports/net/openslp/files/slpd.sh.sample,v 1.4 2004/07/26 20:12:57 marcus Exp $
 #
 # PROVIDE: slpd
 # REQUIRE: DAEMON
-# KEYWORD: FreeBSD
+# KEYWORD: shutdown
 #
 # Add the following line to /etc/rc.conf to enable slpd:
 #
