--- a/print/cups/Makefile.common
+++ b/print/cups/Makefile.common
@@ -1,6 +1,6 @@
 # ex:ts=8	-*-mode: makefile-*-
 # Common file for CUPS ports
-# $FreeBSD: ports/print/cups/Makefile.common,v 1.22 2005/04/12 03:26:23 obrien Exp $
+# $FreeBSD: ports/print/cups/Makefile.common,v 1.23 2005/04/19 12:38:05 mr Exp $
 
 CUPS_MASTER_SITES=\
   ftp://ftp.funet.fi/pub/mirrors/ftp.easysw.com/pub/cups/${CUPS_VERSION}/ \
@@ -12,7 +12,7 @@ CUPS_MASTER_SITES=\
 CUPS_VERSION=	1.1.23
 CUPS_REVISION=	0
 CUPS_PORTVER=	${CUPS_VERSION}.${CUPS_REVISION}
-CUPS_PORTREV=	0
+CUPS_PORTREV=	1
 CUPS_PORTEPOCH=	0
 CUPS_FILESDIR=	${.CURDIR}/../../print/cups/files
 CUPS_ETCDIR=	${PREFIX}/etc/cups
@@ -79,7 +79,7 @@ CONFIGURE_ARGS+=	--localstatedir=/var		\
 
 .if !defined(WITHOUT_GNUTLS)
 CONFIGURE_ARGS+=	--enable-gnutls --disable-openssl
-LIB_DEPENDS+=		gnutls-openssl.12:${PORTSDIR}/security/gnutls
+LIB_DEPENDS+=		gnutls-openssl.15:${PORTSDIR}/security/gnutls
 .endif
 
 CONFIGURE_ARGS+=	CPPFLAGS="-I.. -I${LOCALBASE}/include"
