--- a/devel/ccache/files/ccache-howto-freebsd.txt.in
+++ b/devel/ccache/files/ccache-howto-freebsd.txt.in
@@ -1,11 +1,11 @@
 #
-# $FreeBSD: ports/devel/ccache/files/ccache-howto-freebsd.txt.in,v 1.8 2005/02/05 14:28:03 ahze Exp $
+# $FreeBSD: ports/devel/ccache/files/ccache-howto-freebsd.txt.in,v 1.9 2005/02/21 11:06:30 ahze Exp $
 #
 
 To use ccache add the following to /etc/make.conf
 
 .if !defined(NOCCACHE)
-.if ${.CURDIR:M/usr/src*}
+.if ${.CURDIR:M/usr/src*} && exists(%%LOCALBASE%%/libexec/ccache/cc)
 CC=%%LOCALBASE%%/libexec/ccache/cc
 CXX=%%LOCALBASE%%/libexec/ccache/c++
 .else
