--- a/misc/ldconfig_compat/files/ldconfig_compat.sh.in
+++ b/misc/ldconfig_compat/files/ldconfig_compat.sh.in
@@ -1,6 +1,6 @@
 #!/bin/sh
 #
-# $FreeBSD$
+# $FreeBSD: ports/misc/ldconfig_compat/files/ldconfig_compat.sh.in,v 1.1 2006/01/08 12:38:49 flz Exp $
 #
 
 # PROVIDE: ldconfig_compat
@@ -13,6 +13,10 @@ name="ldconfig"
 ldconfig_command="/sbin/ldconfig"
 start_cmd="ldconfig_start"
 stop_cmd=":"
+
+load_rc_config $name
+: ${ldconfig_local_dirs="%%PREFIX%%/%%LDCONFIG_DIR%% %%X11BASE%%/%%LDCONFIG_DIR%%"}
+: ${ldconfig_local32_dirs="%%PREFIX%%/%%LDCONFIG32_DIR%% %%X11BASE%%/%%LDCONFIG32_DIR%%"}
 
 ldconfig_start()
 {
@@ -44,5 +48,4 @@ ldconfig_start()
 	fi
 }
 
-load_rc_config $name
 run_rc_command "$1"
