--- a/security/clamsmtp/files/clamsmtpd.sh.in
+++ b/security/clamsmtp/files/clamsmtpd.sh.in
@@ -1,6 +1,6 @@
 #!/bin/sh
 #
-# $FreeBSD: ports/security/clamsmtp/files/clamsmtpd.sh.tmpl,v 1.4 2005/09/03 07:48:10 clsung Exp $
+# $FreeBSD$
 #
 # PROVIDE: clamsmtpd
 # REQUIRE: DAEMON
@@ -13,7 +13,7 @@
 
 . %%RC_SUBR%%
 
-name=clamsmtpd
+name="clamsmtpd"
 rcvar=`set_rcvar`
 
 command=%%PREFIX%%/sbin/${name}
