--- a/security/amavisd-milter/files/amavisd-milter.sh.in
+++ b/security/amavisd-milter/files/amavisd-milter.sh.in
@@ -1,6 +1,6 @@
 #!/bin/sh
 #
-# $FreeBSD: ports/security/amavisd-milter/files/amavisd-milter.sh.in,v 1.1 2005/11/13 16:28:47 lawrance Exp $
+# $FreeBSD: ports/security/amavisd-milter/files/amavisd-milter.sh.in,v 1.2 2005/11/17 20:14:49 pav Exp $
 #
 
 # PROVIDE: amavisd-milter
@@ -23,11 +23,12 @@ load_rc_config $name
 
 # Set defaults
 : ${amavisd_milter_enable:="NO"}
-: ${amavisd_milter_flags:=""}
-: ${amavisd_milter_pidfile:="%%AMAVISDIR%%/amavisd-milter.pid"}
+: ${amavisd_milter_flags:="-w %%AMAVISDIR%%/tmp"}
 : ${amavisd_milter_user:="%%AMAVISUSER%%"}
 
+pidfile="${amavisd_milter_pidfile:-%%AMAVISDIR%%/amavisd-milter.pid}"
 command="%%PREFIX%%/sbin/amavisd-milter"
+command_args="-p ${pidfile}"
 required_files="%%PREFIX%%/etc/amavisd.conf"
 
 run_rc_command "$1"
