--- a/sysutils/webmin/files/webmin.sh.in
+++ b/sysutils/webmin/files/webmin.sh.in
@@ -1,6 +1,6 @@
 #!/bin/sh
 #
-# $FreeBSD: ports/sysutils/webmin/files/webmin.sh.sample,v 1.6 2004/06/19 20:57:32 olgeni Exp $
+# $FreeBSD: ports/sysutils/webmin/files/webmin.sh.in,v 1.7 2005/12/22 21:15:35 olgeni Exp $
 #
 # PROVIDE: webmin
 # REQUIRE: LOGIN
@@ -10,6 +10,8 @@
 #
 # webmin_enable="YES"
 #
+
+webmin_enable=${webmin_enable:-"NO"}
 
 . %%RC_SUBR%%
 
