Update to nagios-2.0.r2 includes: - Added SHA256 checksum to distinfo - Added reload argument to nagios.sh script - PERL_SYS_INIT3 fix now committed to Nagios CVS, patch redundant - Removed duplicated etc/rc.d/nagios.sh from pkg-plist
PR:		91892
Submitted by:	Jarrod Sayers <jarrod@netleader.com.au> (maintainer)

--- a/net-mgmt/nagios/files/nagios.sh.in
+++ b/net-mgmt/nagios/files/nagios.sh.in
@@ -1,6 +1,6 @@
 #!/bin/sh
 #
-# $FreeBSD$
+# $FreeBSD: ports/net-mgmt/nagios/files/nagios.sh.in,v 1.1 2006/01/09 00:54:01 edwin Exp $
 #
 
 #
@@ -18,12 +18,14 @@ rcvar=`set_rcvar`
 
 command="%%PREFIX%%/bin/nagios"
 command_args="-d"
+extra_commands="reload"
 pidfile="%%NAGIOSDIR%%/nagios.lock"
 nagios_user="%%NAGIOSUSER%%"
 
 start_precmd="start_precmd"
 stop_postcmd="stop_postcmd"
 restart_precmd="nagios_checkconfig"
+sig_reload=HUP
 
 [ -z "${nagios_enable}" ]       && nagios_enable="NO"
 [ -z "${nagios_flags}" ]        && nagios_flags=""
