--- a/ftp/vsftpd/files/vsftpd.sh.in
+++ b/ftp/vsftpd/files/vsftpd.sh.in
@@ -1,6 +1,6 @@
 #!/bin/sh
 #
-# $FreeBSD: ports/ftp/vsftpd/files/vsftpd.sh.in,v 1.4 2005/11/02 17:13:39 dinoex Exp $
+# $FreeBSD: ports/ftp/vsftpd/files/vsftpd.sh.in,v 1.5 2005/11/13 10:47:03 dinoex Exp $
 #
 
 # PROVIDE: vsftpd
@@ -22,7 +22,7 @@ load_rc_config "$name"
 : ${vsftpd_enable:="NO"}
 : ${vsftpd_flags:=""}
 
-command="%%PREFIX%%/libexec/$name ${vsftpd_flags}"
+command="%%PREFIX%%/libexec/$name"
 required_files="%%PREFIX%%/etc/$name.conf"
 start_precmd="vsftpd_check"
 
