--- a/www/lighttpd/files/lighttpd.conf.sample
+++ b/www/lighttpd/files/lighttpd.conf.sample
@@ -1,6 +1,6 @@
 # lighttpd configuration file
 #
-# use a it as base for lighttpd 1.0.0 and above
+# use it as a base for lighttpd 1.0.0 and above
 #
 # $Id: lighttpd.conf,v 1.7 2004/11/03 22:26:05 weigon Exp $
 
@@ -16,6 +16,8 @@ server.modules              = (
 #                               "mod_redirect",
 #                               "mod_alias",
                                 "mod_access",
+#                               "mod_cml",
+#                               "mod_trigger_b4_dl",
 #                               "mod_auth",
 #                               "mod_status",
 #                               "mod_setenv",
@@ -41,12 +43,11 @@ server.document-root        = "/usr/local/www/data/"
 server.errorlog             = "/var/log/lighttpd.error.log"
 
 # files to check for if .../ is requested
-server.indexfiles           = ( "index.php", "index.html",
+index-file.names            = ( "index.php", "index.html",
                                 "index.htm", "default.htm" )
 
-# set the event-handler (read the performance section in the manual)
+## set the event-handler (read the performance section in the manual)
 server.event-handler = "freebsd-kqueue" # needed on OS X
-
 
 # mimetype mapping
 mimetype.assign             = (
@@ -68,7 +69,7 @@ mimetype.assign             = (
   ".m3u"          =>      "audio/x-mpegurl",
   ".wma"          =>      "audio/x-ms-wma",
   ".wax"          =>      "audio/x-ms-wax",
-  ".ogg"          =>      "audio/x-wav",
+  ".ogg"          =>      "application/ogg",
   ".wav"          =>      "audio/x-wav",
   ".gif"          =>      "image/gif",
   ".jpg"          =>      "image/jpeg",
@@ -83,6 +84,8 @@ mimetype.assign             = (
   ".js"           =>      "text/javascript",
   ".asc"          =>      "text/plain",
   ".c"            =>      "text/plain",
+  ".cpp"          =>      "text/plain",
+  ".log"          =>      "text/plain",
   ".conf"         =>      "text/plain",
   ".text"         =>      "text/plain",
   ".txt"          =>      "text/plain",
@@ -102,12 +105,12 @@ mimetype.assign             = (
  )
 
 # Use the "Content-Type" extended attribute to obtain mime type if possible
-#mimetypes.use-xattr        = "enable"
+#mimetype.use-xattr        = "enable"
 
 
 ## send a different Server: header
 ## be nice and keep it at lighttpd
-#server.tag                 = "lighttpd"
+# server.tag                 = "lighttpd"
 
 #### accesslog module
 accesslog.filename          = "/var/log/lighttpd.access.log"
@@ -119,7 +122,15 @@ accesslog.filename          = "/var/log/lighttpd.access.log"
 #      of the document-root
 url.access-deny             = ( "~", ".inc" )
 
+$HTTP["url"] =~ "\.pdf$" {
+  server.range-requests = "disable"
+}
 
+##
+# which extensions should not be handle via static-file transfer
+#
+# .php, .pl, .fcgi are most often handled by mod_fastcgi or mod_cgi
+static-file.exclude-extensions = ( ".php", ".pl", ".fcgi" )
 
 ######### Options that are good to be but not neccesary to be changed #######
 
@@ -158,7 +169,7 @@ server.pid-file            = "/var/run/lighttpd.pid"
 #server.errorfile-prefix    = "/home/weigon/projects/lighttpd/doc/status-"
 
 ## virtual directory listings
-#server.dir-listing         = "enable"
+#dir-listing.activate       = "enable"
 
 ## enable debugging
 #debug.log-request-header   = "enable"
@@ -217,7 +228,7 @@ server.groupname           = "www"
 #status.config-url          = "/server-config"
 
 #### auth module
-## read authentification.txt for more info
+## read authentication.txt for more info
 #auth.backend               = "plain"
 #auth.backend.plain.userfile = "lighttpd.user"
 #auth.backend.plain.groupfile = "lighttpd.group"
@@ -230,19 +241,23 @@ server.groupname           = "www"
 #                               (
 #                                 "method"  => "digest",
 #                                 "realm"   => "download archiv",
-#                                 "require" => "group=www|user=jan|host=192.168.2.10"
+#                                 "require" => "user=jan"
 #                               ),
-#                               "/server-info" =>
+#                               "/server-config" =>
 #                               (
 #                                 "method"  => "digest",
 #                                 "realm"   => "download archiv",
-#                                 "require" => "group=www|user=jan|host=192.168.2.10"
+#                                 "require" => "valid-user"
 #                               )
 #                             )
 
 #### url handling modules (rewrite, redirect, access)
 #url.rewrite                = ( "^/$"             => "/server-status" )
 #url.redirect               = ( "^/wishlist/(.+)" => "http://www.123.org/$1" )
+#### both rewrite/redirect support back reference to regex conditional using %n
+#$HTTP["host"] =~ "^www\.(.*)" {
+#  url.redirect            = ( "^/(.*)" => "http://%1/$1" )
+#}
 
 #
 # define a pattern for the host url finding
@@ -268,3 +283,39 @@ server.groupname           = "www"
 #### setenv
 #setenv.add-request-header  = ( "TRAV_ENV" => "mysql://user@host/db" )
 #setenv.add-response-header = ( "X-Secret-Message" => "42" )
+
+## for mod_trigger_b4_dl
+# trigger-before-download.gdbm-filename = "/home/weigon/testbase/trigger.db"
+# trigger-before-download.memcache-hosts = ( "127.0.0.1:11211" )
+# trigger-before-download.trigger-url = "^/trigger/"
+# trigger-before-download.download-url = "^/download/"
+# trigger-before-download.deny-url = "http://127.0.0.1/index.html"
+# trigger-before-download.trigger-timeout = 10
+
+## for mod_cml
+## don't forget to add index.cml to server.indexfiles
+# cml.extension               = ".cml"
+# cml.memcache-hosts          = ( "127.0.0.1:11211" )
+
+#### variable usage:
+## variable name without "." is auto prefixed by "var." and becomes "var.bar"
+#bar = 1
+#var.mystring = "foo"
+
+## integer add
+#bar += 1
+## string concat, with integer cast as string, result: "www.foo1.com"
+#server.name = "www." + mystring + var.bar + ".com"
+## array merge
+#index-file.names = (foo + ".php") + index-file.names
+#index-file.names += (foo + ".php")
+
+#### include
+#include /etc/lighttpd/lighttpd-inc.conf
+## same as above if you run: "lighttpd -f /etc/lighttpd/lighttpd.conf"
+#include "lighttpd-inc.conf"
+
+#### include_shell
+#include_shell "echo var.a=1"
+## the above is same as:
+#var.a=1
