--- a/net-im/jabber-pyicq/files/jabber-pyicq-transport.sh.in
+++ b/net-im/jabber-pyicq/files/jabber-pyicq-transport.sh.in
@@ -1,8 +1,7 @@
 #!/bin/sh
-
-# Start or stop jabber-pyicq
-# $FreeBSD: ports/net-im/jabber-pyicq/files/jabber-pyicq-transport.sh.in,v 1.1 2005/06/07 15:18:15 pav Exp $
-
+#
+# $FreeBSD: ports/net-im/jabber-pyicq/files/jabber-pyicq-transport.sh.in,v 1.2 2006/01/23 10:47:12 garga Exp $
+#
 # PROVIDE: jabber_pyicq
 # REQUIRE: DAEMON
 # BEFORE: LOGIN
@@ -12,17 +11,17 @@
 #       /etc/rc.conf
 #       /etc/rc.conf.local
 #
-# DO NOT CHANGE THESE DEFAULT VALUES HERE
-#
-jabber_pyicq_dir=${jabber_pyicq_dir:-"%%PREFIX%%/lib/jabber/pyicq"}
-jabber_pyicq_piddir=${jabber_pyicq_piddir:-"/var/jabberd/pid"}
-jabber_pyicq_enable=${jabber_pyicq_enable:-"NO"}
 
 . %%RC_SUBR%%
 
 name="jabber_pyicq"
 rcvar=`set_rcvar`
+
 load_rc_config $name
+
+: ${jabber_pyicq_enable="NO"}
+: ${jabber_pyicq_dir="%%PREFIX%%/lib/jabber/pyicq"}
+: ${jabber_pyicq_piddir="/var/jabberd/pid"}
 
 pidfile="${jabber_pyicq_piddir}/pyicq.pid"
 command_interpreter="%%PYTHON_CMD%%"
