--- a/www/mozilla/Makefile.common
+++ b/www/mozilla/Makefile.common
@@ -3,7 +3,7 @@
 # Date created:		12 Nov 2005
 # Whom:			Michael Johnson <ahze@FreeBSD.org>
 #
-# $FreeBSD: ports/www/mozilla/Makefile.common,v 1.3 2005/12/02 05:30:00 mezz Exp $
+# $FreeBSD: ports/www/mozilla/Makefile.common,v 1.4 2005/12/04 22:05:43 ahze Exp $
 #    $MCom: ports/www/mozilla/Makefile.common,v 1.17 2005/11/29 08:40:08 ahze Exp $
 
 # This file contains some reusable components for mozilla ports. It's of
@@ -185,7 +185,7 @@ WITH_OPTIMIZE?=	-O
 
 .if defined(WITH_SMB)
 USE_GNOME+=	gnomevfs2
-MOZ_OPTIONS+=	--disable-gnomevfs
+MOZ_OPTIONS+=	--enable-gnomevfs
 .endif
 
 .if defined(WITH_DEBUG)
