--- a/mail/dkfilter/files/dkfilter_in.sh.in
+++ b/mail/dkfilter/files/dkfilter_in.sh.in
@@ -1,5 +1,5 @@
 #!/bin/sh
-# $FreeBSD$
+# $FreeBSD: ports/mail/dkfilter/files/dkfilter_in.sh.in,v 1.1 2005/11/12 20:18:42 mnag Exp $
 #
 
 # PROVIDE: dkfilter_in
@@ -23,7 +23,7 @@ rcvar=`set_rcvar`
 dkfilter_in_enable=${dkfilter_in_enable:-"NO"}
 dkfilter_in_flags=${dkfilter_in_flags:-"127.0.0.1:10025 127.0.0.1:10026"}
 dkfilter_in_pidfile=${dkfilter_in_pidfile:-"/var/run/dkfilter_in.pid"}
-dkfilter_in_user=${dkfilter_user:-"dkfilter"}
+dkfilter_in_user=${dkfilter_in_user:-"dkfilter"}
 
 start_cmd="dkfilter_in_start"
 stop_cmd="dkfilter_in_stop"
@@ -37,7 +37,8 @@ dkfilter_in_start()
 	touch ${dkfilter_in_pidfile}
 	chown ${dkfilter_in_user} ${dkfilter_in_pidfile}
 	su -m ${dkfilter_in_user} -c "daemon -p ${dkfilter_in_pidfile} \
-		%%PREFIX%%/bin/dkfilter.in ${dkfilter_in_flags}"
+		%%PREFIX%%/bin/dkfilter.in ${dkfilter_in_flags}" \
+		> /dev/null 2>&1
 	echo "Starting ${name}"
 }
 
