- Fix username creation on pkg-install - s/alias/qalias/g
Reported by:	B. Cook <bcook@bsdwebsolutions.com>

--- a/mail/qmail/files/pkg-install.in
+++ b/mail/qmail/files/pkg-install.in
@@ -1,6 +1,6 @@
 #!/bin/csh -f
 #
-# $FreeBSD: ports/mail/qmail/files/pkg-install.in,v 1.1 2005/05/17 09:14:30 sem Exp $
+# $FreeBSD: ports/mail/qmail/files/pkg-install.in,v 1.2 2005/05/25 19:11:25 novel Exp $
 #
 
 # Author : Marcos Tischer Vallim
@@ -32,7 +32,7 @@ switch ($argv[2])
 case "PRE-INSTALL":
 	set groups  = (qmail qnofiles);
 	set gids    = (82 81);
-	set users   = (alias qmaild qmaill qmailp qmailq qmailr qmails);
+	set users   = (qalias qmaild qmaill qmailp qmailq qmailr qmails);
 	set users_g = (qnofiles qnofiles qnofiles qnofiles qmail qmail qmail);
 	set uids    = (81 82 83 84 85 86 87);
 
@@ -64,7 +64,7 @@ case "PRE-INSTALL":
 		pw usershow $user >& /dev/null;
 	
 		if ($status) then
-			if ($user == "alias") then
+			if ($user == "qalias") then
 				set home = ${PKG_PREFIX}/alias;
 			else
 				set home = ${PKG_PREFIX};
