--- a/java/jmp/files/patch-Makefile.in
+++ b/java/jmp/files/patch-Makefile.in
@@ -1,13 +1,7 @@
-$FreeBSD: ports/java/jmp/files/patch-Makefile.in,v 1.2 2004/08/27 12:06:50 vs Exp $
+$FreeBSD: ports/java/jmp/files/patch-Makefile.in,v 1.3 2005/11/23 01:17:16 barner Exp $
 
 --- Makefile.in.orig	Sat Oct 29 21:48:51 2005
 +++ Makefile.in	Mon Nov 21 01:20:51 2005
 @@ -332 +332 @@
 -	  inst=`echo $$inst | sed '$(transform)'`.$$ext; \
 +	  inst=$$inst.$$ext; \
-@@ -705 +705 @@
--	javac -sourcepath ${top_srcdir}/java -d . $<
-+	${JAVAC} -sourcepath ${top_srcdir}/java -d . $<
-@@ -710 +710 @@
--	javah -classpath . jmp.JMPController
-+	${JAVAH} -classpath . jmp.JMPController
