- Check config when restart rc.d script [1] - Remove BEFORE line and FreeBSD in KEYWORD
PR:		92108 [1]
Submitted by:	Lapo Luchini <lapo@lapo.it> [1]
Approved by:	maintainer timeout, 16 days

--- a/www/lighttpd/files/lighttpd.sh.in
+++ b/www/lighttpd/files/lighttpd.sh.in
@@ -1,11 +1,10 @@
 #!/bin/sh
 #
-# $FreeBSD: ports/www/lighttpd/files/lighttpd.sh.in,v 1.1 2005/08/29 10:13:32 garga Exp $
+# $FreeBSD: ports/www/lighttpd/files/lighttpd.sh.in,v 1.2 2006/01/21 18:11:54 mnag Exp $
 #
 # PROVIDE: lighttpd
 # REQUIRE: %%REQUIRE%%
-# BEFORE: LOGIN
-# KEYWORD: FreeBSD shutdown
+# KEYWORD: shutdown
 #
 # Add the following lines to /etc/rc.conf to enable lighttpd:
 #
@@ -30,6 +29,13 @@ command_args="-f ${lighttpd_conf}"
 pidfile=/var/run/lighttpd.pid
 required_files=${lighttpd_conf}
 stop_postcmd=stop_postcmd
+restart_precmd="checkconfig"
+
+checkconfig()
+{
+	echo "Performing sanity check on ${name} configuration:"
+	eval "${command} ${command_args} -t"
+}
 
 stop_postcmd()
 {
