--- a/x11-themes/kde-icons-noia/Makefile.icons
+++ b/x11-themes/kde-icons-noia/Makefile.icons
@@ -2,7 +2,7 @@
 # Date created:		Thu Feb 19 23:17:56 UTC 2004
 # Whom:			Mario Sergio Fujikawa Ferreira <lioux@FreeBSD.org>
 #
-# $FreeBSD: ports/x11-themes/kde-icons-noia/Makefile.icons,v 1.8 2004/11/24 23:52:43 lioux Exp $
+# $FreeBSD: ports/x11-themes/kde-icons-noia/Makefile.icons,v 1.9 2006/01/22 06:28:58 edwin Exp $
 #
 
 CATEGORIES?=	x11-themes kde
@@ -86,7 +86,7 @@ generate-tmpplist:
 			-e 's|^\.|@dirrm share/icons/${PORT_SHAREDIR:S/"//g}|' \
 			>> ${TMPPLIST}
 	@${ECHO_CMD} \
-		'@dirrmtry share/icons' >> ${TMPPLIST}
+		'@unexec rmdir %D/share/icons 2>/dev/null || true' >> ${TMPPLIST}
 
 # use generated installation scripts
 install-run-scripts:
