- Remove USE_REINPLACE - Remove trailing whitespaces - Remove depreciated USE_RCORDER - Unquote BROKEN message - Add an extra MASTER_SITE - Change pdns.sh.in and pdns_recursor.sh.in to pdns.in and pdns_recursor.in so   it'll work with USE_RC_SUBR - Bump PORTREVISION
PR:		93336
Submitted by:	Ralf van der Enden <tremere@cainites.net> (maintainer)

--- a/dns/powerdns-devel/files/pdns.in
+++ b/dns/powerdns-devel/files/pdns.in
@@ -1,6 +1,6 @@
 #!/bin/sh
 #
-# $FreeBSD: ports/dns/powerdns/files/pdns.sh.in,v 1.2 2005/10/30 11:19:55 pav Exp $
+# $FreeBSD: ports/dns/powerdns/files/pdns.in,v 1.2 2005/11/04 10:27:39 kwm Exp $
 #
 
 # PROVIDE: pdns_server
