--- a/dns/powerdns-devel/files/pdns_recursor.in
+++ b/dns/powerdns-devel/files/pdns_recursor.in
@@ -1,6 +1,6 @@
 #!/bin/sh
 #
-# $FreeBSD: ports/dns/powerdns/files/pdns_recursor.sh.in,v 1.2 2005/10/30 12:40:33 pav Exp $
+# $FreeBSD: ports/dns/powerdns/files/pdns_recursor.in,v 1.2 2005/11/04 10:27:39 kwm Exp $
 #
 
 # PROVIDE: pdns_recursor
