o Add missing BUILD_DEPENDS on math/libgmp4 o Properly USE_RC_SUBR by pointing to a template rcng startup script o Move FILESDIR/i2p.sh to FILESDIR/i2p.sh.in in order to benefit   of USE_RC_SUBR automated PLIST_SUB replacement o Bump PORTREVISION
PR:		93405
Submitted by:	Peter Thoenen <peter.thoenen@yahoo.com> <eol1@yahoo.com>

--- a/net-p2p/i2p/files/i2p.sh.in
+++ b/net-p2p/i2p/files/i2p.sh.in
@@ -1,6 +1,6 @@
 #!/bin/sh
 #
-# $FreeBSD: ports/net/i2p/files/i2p.sh,v 1.1 2005/10/10 06:59:09 lioux Exp $
+# $FreeBSD: ports/net-p2p/i2p/files/i2p.sh,v 1.2 2005/10/10 11:05:03 lioux Exp $
 #
 # Under a BSDL license. Copyright 2005. Mario S F Ferreira <lioux@FreeBSD.org>
 
