- Add LICENSE - Space/Tab twiddle - Remove obsolete MD5 checksum while I'm here
PR:		ports/154015
Submitted by:	Douglas William Thrift <douglas@douglasthrift.net> (maintainer)
Feature safe:	yes

--- a/www/anyterm/files/anytermd.in
+++ b/www/anyterm/files/anytermd.in
@@ -1,6 +1,6 @@
 #!/bin/sh
 #
-# $FreeBSD: ports/www/anyterm/files/anytermd.in,v 1.1 2009/11/21 10:18:54 miwi Exp $
+# $FreeBSD: ports/www/anyterm/files/anytermd.in,v 1.2 2010/03/27 00:15:08 dougb Exp $
 #
 
 # PROVIDE: anytermd
@@ -16,7 +16,7 @@
 # anytermd_flags (str):     Set to "-c /usr/bin/login -u nobody --local-only"
 #                           by default. See anytermd(1) for flags.
 #
-# anytermd_name (str):		Set to "anyterm" by default.
+# anytermd_name (str):      Set to "anyterm" by default.
 #
 
 . /etc/rc.subr
