Add CLIENT_BACKUP_FTP_SITE as part of a generalization push between bindist-*.tar files on pointyhat and pointyhat-west.
Feature safe:	yes

--- a/Tools/portbuild/conf/client.conf
+++ b/Tools/portbuild/conf/client.conf
@@ -1,7 +1,7 @@
 #
 # client-side definitions (used in /var/portbuild/scripts/portbuild)
 #
-# $FreeBSD$
+# $FreeBSD: ports/Tools/portbuild/conf/client.conf,v 1.3 2010/12/01 02:38:04 linimon Exp $
 #
 
 #
@@ -11,6 +11,9 @@
 # for nodes where disconnected=0, the NFS host they should mount ports/
 # and src/ from
 CLIENT_NFS_MASTER=pointyhat.FreeBSD.org
+
+# fallback for distfiles (see make.conf in bindist-*.tar)
+CLIENT_BACKUP_FTP_SITE=pointyhat.FreeBSD.org
 
 # where completed packages get uploaded
 CLIENT_UPLOAD_HOST=pointyhat.FreeBSD.org
