--- a/mail/postfix27/files/postfix.sh.in
+++ b/mail/postfix27/files/postfix.sh.in
@@ -1,6 +1,6 @@
 #!/bin/sh
 #
-# $FreeBSD: ports/mail/postfix/files/postfix.sh.in,v 1.8 2010/03/27 00:13:21 dougb Exp $
+# $FreeBSD: ports/mail/postfix27/files/postfix.sh.in,v 1.9 2010/09/13 02:09:35 sahil Exp $
 #
 # PROVIDE: postfix mail
 # REQUIRE: %%REQUIRE%%
