- Update to 2.0.9 [1] - Enable VPOPMAIL [2] - Fix comments - Sort MAN1 - Use ETCDIR - Simplify installation - Space/Tab twiddle
Changes:	http://www.dovecot.org/list/dovecot-news/2011-January/000184.html
		http://www.dovecot.org/list/dovecot-news/2010-December/000182.html
PR:		ports/154004 [1]
		ports/153295 [2]
Submitted by:	Alexander Wittig <alexander@wittig.name> [1]
Approved by:	maintainer (timeout, 21 days) [1]
Feature safe:	yes

--- a/mail/dovecot2/files/dovecot.sh.in
+++ b/mail/dovecot2/files/dovecot.sh.in
@@ -1,6 +1,6 @@
 #!/bin/sh
 #
-# $FreeBSD: ports/mail/dovecot/files/dovecot.sh.in,v 1.13 2010/03/27 00:13:14 dougb Exp $
+# $FreeBSD: ports/mail/dovecot2/files/dovecot.sh.in,v 1.1 2010/11/27 05:53:35 glewis Exp $
 #
 
 # PROVIDE: dovecot
@@ -20,7 +20,7 @@ rcvar=`set_rcvar`
 # read configuration and set defaults
 load_rc_config ${name}
 : ${dovecot_enable:="NO"}
-: ${dovecot_config:="%%PREFIX%%/etc/dovecot/${name}.conf"}
+: ${dovecot_config:="%%ETCDIR%%/${name}.conf"}
 
 command="%%PREFIX%%/sbin/${name}"
 start_precmd="start_precmd"
