- Update to 2.9.0.3 [1] - pass maintainership to William Freeman <wfreeman_AT_sourcefire dot com>
Note: This attached patch replaces the one in ports/153998.
      Also fixes the location of the dynamic libs/rules in ports/153224.
PR:		ports/154514 [1], ports/153998 [2]
Submitted by:	Michael Scheidell <scheidell_AT_secnap dot net>

--- a/security/snort/files/snort.sh.in
+++ b/security/snort/files/snort.sh.in
@@ -1,5 +1,5 @@
 #!/bin/sh
-# $FreeBSD: ports/security/snort/files/snort.sh.in,v 1.4 2009/10/29 01:27:53 clsung Exp $
+# $FreeBSD: ports/security/snort/files/snort.sh.in,v 1.5 2010/03/27 00:14:48 dougb Exp $
 
 # PROVIDE: snort
 # REQUIRE: DAEMON
@@ -27,6 +27,7 @@
 
 name="snort"
 rcvar=`set_rcvar`
+extra_commands=reload
 
 command="%%PREFIX%%/bin/snort"
 
