- Update comms/lirc to 0.9.0p1_4 in order to be able to use the lirc   support in webcamd svn (for mceusb-based receivers/transmitters and   USB DVB tuner remotes supported by the Linux code), and enable   support for a few more USB devices while we're at it tho of those   only an FTDI-based one was tested:
	http://www.huitsing.nl/irftdi/ [1]

- Fix plist for audio/rhythmbox and multimedia/totem and
  add missing LIRC_{CFLAGS,LIBS} variables to CONFIGURE_ENV for
  multimedia/xine when building them with (optional) lirc support. [2]

- Chase liblirc_client shlib version bump for ports depdending on it
  and bump PORTREVISIONs for ports depending on it by default.

Approved by:	portmgr (miwi) [2]
Thanks to:	Warren Block <wblock@wonkity.com> for testing [1]

--- a/comms/lirc/files/lircd.sh.in
+++ b/comms/lirc/files/lircd.sh.in
@@ -1,6 +1,6 @@
 #!/bin/sh
 #
-# $FreeBSD: ports/comms/lirc/files/lircd.sh.in,v 1.2 2009/07/15 16:55:38 dougb Exp $
+# $FreeBSD: ports/comms/lirc/files/lircd.sh.in,v 1.3 2010/03/27 00:12:44 dougb Exp $
 #
 # PROVIDE: lircd
 # REQUIRE: DAEMON
@@ -20,7 +20,7 @@ load_rc_config ${name}
 : ${lircd_device="/dev/lirc0"}
 
 procname=%%PREFIX%%/sbin/lircd
-pidfile=/var/run/lircd.pid
+pidfile=/var/run/lirc/lircd.pid
 lircd_config="%%PREFIX%%/etc/lircd.conf"
 required_files=${lircd_config}
 command="%%PREFIX%%/sbin/lircd"
