- The %%RC_SUBR%% variable in the rc script source files/chef_client.in isn't getting replaced by default. Rather than adding this variable to SUB_LIST, it makes more sense to explicitly replace it in the source file itself. This is done in numerous other rc script source files as well as in the example in the Porter's Handbook. - bump PORTREVISION
PR:		ports/155279
Submitted by:	Dimitri Aivaliotis <aglarond_AT_gmail dot com>
Approved by:	maintainer (Renaud Chaput)

--- a/sysutils/rubygem-chef/files/chef_client.in
+++ b/sysutils/rubygem-chef/files/chef_client.in
@@ -1,6 +1,6 @@
 #!/bin/sh
 #
-# $FreeBSD$
+# $FreeBSD: ports/sysutils/rubygem-chef/files/chef_client.in,v 1.1 2011/01/18 12:00:11 wen Exp $
 #
 
 # PROVIDE: chef_client
@@ -12,7 +12,7 @@
 #
 #  chef_client_enable="YES"
 
-. %%RC_SUBR%%
+. /etc/rc.subr
 
 name="chef_client"
 rcvar=`set_rcvar`
