- Fix plist when WITH_EXTCOLORS is turned on
PR:		ports/155401
Submitted by:	Pierre Guinoiseau <geekounet at poildetroll.net> (with modification)

--- a/devel/ncurses-devel/Makefile.man
+++ b/devel/ncurses-devel/Makefile.man
@@ -1,4 +1,4 @@
-# $FreeBSD: ports/devel/ncurses-devel/Makefile.man,v 1.12 2010/04/05 01:45:55 rafan Exp $
+# $FreeBSD: ports/devel/ncurses-devel/Makefile.man,v 1.13 2010/10/31 13:33:29 rafan Exp $
 
 MANCOMPRESSED=	yes
 
@@ -21,7 +21,7 @@ MLINKS+=\
 	tset.1 reset.1
 
 .if !defined(WITHOUT_WIDEC)
-MAN1+=	ncursesw5-config.1
+MAN1+=	ncursesw${NCURSESW_ABI_VER}-config.1
 .endif
 
 MAN5=	term.5 terminfo.5
