--- a/devel/ncurses/Makefile.man
+++ b/devel/ncurses/Makefile.man
@@ -1,4 +1,4 @@
-# $FreeBSD: ports/devel/ncurses/Makefile.man,v 1.3 2008/11/06 04:20:49 rafan Exp $
+# $FreeBSD: ports/devel/ncurses/Makefile.man,v 1.4 2011/03/06 09:19:31 rafan Exp $
 
 MANCOMPRESSED=	yes
 
@@ -21,7 +21,7 @@ MLINKS+=\
 	tset.1 reset.1
 
 .if !defined(WITHOUT_WIDEC)
-MAN1+=	ncursesw5-config.1
+MAN1+=	ncursesw${NCURSESW_ABI_VER}-config.1
 .endif
 
 MAN5=	term.5 terminfo.5
