--- a/sysutils/cfengine3/files/cf-serverd.in
+++ b/sysutils/cfengine3/files/cf-serverd.in
@@ -1,6 +1,6 @@
 #!/bin/sh
 #
-# $FreeBSD: ports/sysutils/cfengine3/files/cf-serverd.in,v 1.5 2010/07/20 22:27:20 cy Exp $
+# $FreeBSD: ports/sysutils/cfengine3/files/cf-serverd.in,v 1.6 2011/02/06 02:46:17 cy Exp $
 #
 # PROVIDE: cf-serverd
 # REQUIRE: LOGIN
@@ -8,18 +8,18 @@
 #
 # Add the following line to /etc/rc.conf[.local] to enable cf-serverd(8)
 #
-# cf-serverd_enable (bool):        Set to "NO" by default.
+# cf_serverd_enable (bool):        Set to "NO" by default.
 #                               Set it to "YES" to enable cf-serverd.
-# cf-serverd_flags (str):          Custom additional arguments to be passed
+# cf_serverd_flags (str):          Custom additional arguments to be passed
 #                               to cf-serverd (default empty).
 #
 
 . /etc/rc.subr
 
-name="cf-serverd"
+name="cf_serverd"
 rcvar=${name}_enable
 
-command="%%PREFIX%%/sbin/${name}"
+command="%%PREFIX%%/sbin/cf-serverd"
 
 load_rc_config $name
 
